# spherical-rtree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py  tests.py
sphertree/: CMakeLists.txt  SphericalRTree.hpp  __init__.py  _binding.pyi  _binding.pyx
